# wayland-desktop

./: .gitignore  ABOUT.md  CLAUDE.md  LICENSE.md  README.md  WARNINGS.md  config.yaml  getconfig  mouse-clicks  probe  pyproject.toml  realign  restore  secret-service  snapshot
docs/: ADRs.md  ARCHITECTURE.md  CONFIG.md  DATA-MODELS.md  GLOSSARY.md  INSTALL.md  LIBRARY-API.md  OVERVIEW.md  PROBLEMS.md  REQUIREMENTS.md  SNAPSHOT.md
docs/dev/: INVESTIGATION_LOG.md  README.md  eis_test.py  kwin_click.py  kwin_dbus_callback_test.md  kwin_dbus_callback_test.py  kwin_desktop_assign_test.md  kwin_desktop_assign_test.py  kwin_geometry_screen_test.md  kwin_geometry_screen_test.py  kwin_introspect.md  kwin_introspect.py  kwin_lib_test.py  kwin_mutation_test.md  kwin_mutation_test.py  kwin_property_test.md  kwin_property_test.py  kwin_script_test.md  kwin_script_test.py  kwin_secret_service.py  kwin_tile_test.md  kwin_tile_test.py  portal_keyboard_test.py
wayland/: kwin_getconfig.py  kwin_mouse-clicks.py  kwin_probe.py  kwin_realign.py  kwin_restore.py  kwin_secret_service.py  kwin_snapshot.py
wayland/kwin_lib/: __init__.py  bus.py  click_indicator.py  config.py  desktop.py  input_injection.py  models.py  probe.py  progress_window.py  secret_service.py  session_state.py  snapshot.py  window.py
